add Command in README.md